tests/conformance/negative/08-unclosed-tag.sml
<!-- INVALID: unclosed tag -->
<!-- Expected: ParseError::UnclosedTag -->
<skill interface="broken">
  This tag is never closed.
